@@ -13,12 +13,13 @@ agar-gui-rect.o agar-gui-style.ali agar-gui-style.o agar-gui-surface.ali \
 agar-gui-surface.o agar-gui-text.ali agar-gui-text.o agar-gui-unit.ali \
 agar-gui-unit.o agar-gui-view.ali agar-gui-view.o agar-gui-widget-box.ali \
 agar-gui-widget-box.o agar-gui-widget-button.ali agar-gui-widget-button.o \
-agar-gui-widget.ali agar-gui-widget.o agar-gui-window.ali agar-gui-window.o \
-agar-gui.ali agar-gui.o chk-opengl chk-opengl.o ctxt/bindir.o ctxt/ctxt.a \
-ctxt/dlibdir.o ctxt/incdir.o ctxt/repos.o ctxt/slibdir.o ctxt/version.o \
-deinstaller deinstaller.o inst-check inst-check.o inst-copy inst-copy.o \
-inst-dir inst-dir.o inst-link inst-link.o install_core.o install_error.o \
-installer installer.o instchk instchk.o insthier.o
+agar-gui-widget-checkbox.ali agar-gui-widget-checkbox.o agar-gui-widget.ali \
+agar-gui-widget.o agar-gui-window.ali agar-gui-window.o agar-gui.ali agar-gui.o \
+chk-opengl chk-opengl.o ctxt/bindir.o ctxt/ctxt.a ctxt/dlibdir.o ctxt/incdir.o \
+ctxt/repos.o ctxt/slibdir.o ctxt/version.o deinstaller deinstaller.o inst-check \
+inst-check.o inst-copy inst-copy.o inst-dir inst-dir.o inst-link inst-link.o \
+install_core.o install_error.o installer installer.o instchk instchk.o \
+insthier.o
 
 # Mkf-deinstall
 deinstall: deinstaller inst-check inst-copy inst-dir inst-link
@@ -123,8 +124,8 @@ ada-bind ada-link UNIT_TESTS/ada_size.ald UNIT_TESTS/ada_size.ali \
 agar-gui-colors.ali agar-gui-draw.ali agar-gui-pixelformat.ali \
 agar-gui-point.ali agar-gui-rect.ali agar-gui-style.ali agar-gui-surface.ali \
 agar-gui-text.ali agar-gui-unit.ali agar-gui-view.ali agar-gui-widget-box.ali \
-agar-gui-widget-button.ali agar-gui-widget.ali agar-gui-window.ali agar-gui.ali \
-agar-gui-ada.a
+agar-gui-widget-button.ali agar-gui-widget-checkbox.ali agar-gui-widget.ali \
+agar-gui-window.ali agar-gui.ali agar-gui-ada.a
 	./ada-bind UNIT_TESTS/ada_size.ali
 	./ada-link UNIT_TESTS/ada_size UNIT_TESTS/ada_size.ali agar-gui-ada.a
 
@@ -133,7 +134,8 @@ ada-compile UNIT_TESTS/ada_size.adb agar-gui-colors.ads \
 agar-gui-pixelformat.ads agar-gui-point.ads agar-gui-rect.ads \
 agar-gui-style.ads agar-gui-surface.ads agar-gui-text.ads agar-gui-unit.ads \
 agar-gui-view.ads agar-gui-widget-box.ads agar-gui-widget-button.ads \
-agar-gui-widget.ads agar-gui-window.ads agar-gui.ads
+agar-gui-widget-checkbox.ads agar-gui-widget.ads agar-gui-window.ads \
+agar-gui.ads
 	./ada-compile UNIT_TESTS/ada_size.adb
 
 UNIT_TESTS/ada_size.o:\
@@ -206,14 +208,14 @@ cc-slib agar-gui-ada.sld ag_button.o ag_draw.o ag_event.o ag_surface.o \
 ag_unit.o ag_widget.o ag_window.o agar-gui-colors.o agar-gui-draw.o \
 agar-gui-pixelformat.o agar-gui-point.o agar-gui-rect.o agar-gui-style.o \
 agar-gui-surface.o agar-gui-text.o agar-gui-unit.o agar-gui-view.o \
-agar-gui-widget-box.o agar-gui-widget-button.o agar-gui-widget.o \
-agar-gui-window.o agar-gui.o
+agar-gui-widget-box.o agar-gui-widget-button.o agar-gui-widget-checkbox.o \
+agar-gui-widget.o agar-gui-window.o agar-gui.o
 	./cc-slib agar-gui-ada ag_button.o ag_draw.o ag_event.o ag_surface.o ag_unit.o \
 	ag_widget.o ag_window.o agar-gui-colors.o agar-gui-draw.o \
 	agar-gui-pixelformat.o agar-gui-point.o agar-gui-rect.o agar-gui-style.o \
 	agar-gui-surface.o agar-gui-text.o agar-gui-unit.o agar-gui-view.o \
-	agar-gui-widget-box.o agar-gui-widget-button.o agar-gui-widget.o \
-	agar-gui-window.o agar-gui.o
+	agar-gui-widget-box.o agar-gui-widget-button.o agar-gui-widget-checkbox.o \
+	agar-gui-widget.o agar-gui-window.o agar-gui.o
 
 agar-gui-colors.ali:\
 ada-compile agar-gui-colors.adb agar-gui-colors.ads
@@ -314,6 +316,13 @@ ada-compile agar-gui-widget-button.adb agar-gui-widget-button.ads
 
 agar-gui-widget-button.o:\
 agar-gui-widget-button.ali
+
+agar-gui-widget-checkbox.ali:\
+ada-compile agar-gui-widget-checkbox.adb agar-gui-widget-checkbox.ads
+	./ada-compile agar-gui-widget-checkbox.adb
+
+agar-gui-widget-checkbox.o:\
+agar-gui-widget-checkbox.ali
 
 # agar-gui-widget.ads.mff
 agar-gui-widget.ads: agar-gui-widget.sh chk-opengl agar-gui-widget.ads.txt
@@ -549,14 +558,14 @@ obj_clean:
 	agar-gui-surface.o agar-gui-text.ali agar-gui-text.o agar-gui-unit.ali \
 	agar-gui-unit.o agar-gui-view.ali agar-gui-view.o agar-gui-widget-box.ali \
 	agar-gui-widget-box.o agar-gui-widget-button.ali agar-gui-widget-button.o \
-	agar-gui-widget.ads agar-gui-widget.ali agar-gui-widget.o agar-gui-window.ali \
-	agar-gui-window.o agar-gui.ali agar-gui.o chk-opengl chk-opengl.o ctxt/bindir.c \
-	ctxt/bindir.o ctxt/ctxt.a ctxt/dlibdir.c ctxt/dlibdir.o ctxt/incdir.c \
-	ctxt/incdir.o ctxt/repos.c ctxt/repos.o ctxt/slibdir.c ctxt/slibdir.o \
-	ctxt/version.c ctxt/version.o deinstaller deinstaller.o inst-check inst-check.o
-	rm -f inst-copy inst-copy.o inst-dir inst-dir.o inst-link inst-link.o \
-	install_core.o install_error.o installer installer.o instchk instchk.o \
-	insthier.o
+	agar-gui-widget-checkbox.ali agar-gui-widget-checkbox.o agar-gui-widget.ads \
+	agar-gui-widget.ali agar-gui-widget.o agar-gui-window.ali agar-gui-window.o \
+	agar-gui.ali agar-gui.o chk-opengl chk-opengl.o ctxt/bindir.c ctxt/bindir.o \
+	ctxt/ctxt.a ctxt/dlibdir.c ctxt/dlibdir.o ctxt/incdir.c ctxt/incdir.o \
+	ctxt/repos.c ctxt/repos.o ctxt/slibdir.c ctxt/slibdir.o ctxt/version.c
+	rm -f ctxt/version.o deinstaller deinstaller.o inst-check inst-check.o \
+	inst-copy inst-copy.o inst-dir inst-dir.o inst-link inst-link.o install_core.o \
+	install_error.o installer installer.o instchk instchk.o insthier.o
 ext_clean:
 	rm -f conf-adatype conf-cctype conf-ldtype conf-sosuffix conf-systype mk-ctxt
 
