@@ -12,6 +12,7 @@ with agar.gui.unit;
 with agar.gui.view;
 with agar.gui.widget.box;
 with agar.gui.widget.button;
+with agar.gui.widget.checkbox;
 with agar.gui.widget;
 with agar.gui.window;
 with agar.gui;
@@ -47,6 +48,8 @@ procedure ada_size is
   agar_gui_widget_box_type_t : aliased string := "agar.gui.widget.box.type_t";
   agar_gui_widget_button_button_access_t : aliased string := "agar.gui.widget.button.button_access_t";
   agar_gui_widget_button_button_t : aliased string := "agar.gui.widget.button.button_t";
+  agar_gui_widget_checkbox_checkbox_access_t : aliased string := "agar.gui.widget.checkbox.checkbox_access_t";
+  agar_gui_widget_checkbox_checkbox_t : aliased string := "agar.gui.widget.checkbox.checkbox_t";
   agar_gui_widget_class_access_t : aliased string := "agar.gui.widget.class_access_t";
   agar_gui_widget_class_t : aliased string := "agar.gui.widget.class_t";
   agar_gui_widget_flag_descr_access_t : aliased string := "agar.gui.widget.flag_descr_access_t";
@@ -93,6 +96,8 @@ procedure ada_size is
     (agar_gui_widget_box_type_t'access, agar.gui.widget.box.type_t'size),
     (agar_gui_widget_button_button_access_t'access, agar.gui.widget.button.button_access_t'size),
     (agar_gui_widget_button_button_t'access, agar.gui.widget.button.button_t'size),
+    (agar_gui_widget_checkbox_checkbox_access_t'access, agar.gui.widget.checkbox.checkbox_access_t'size),
+    (agar_gui_widget_checkbox_checkbox_t'access, agar.gui.widget.checkbox.checkbox_t'size),
     (agar_gui_widget_class_access_t'access, agar.gui.widget.class_access_t'size),
     (agar_gui_widget_class_t'access, agar.gui.widget.class_t'size),
     (agar_gui_widget_flag_descr_access_t'access, agar.gui.widget.flag_descr_access_t'size),
