@@ -50,6 +50,10 @@ struct {
   { "struct ag_button *", sizeof (struct ag_button *) },
   { "AG_Button", sizeof (AG_Button) },
   { "struct ag_button", sizeof (struct ag_button) },
+  { "AG_Checkbox *", sizeof (AG_Checkbox *) },
+  { "struct ag_checkbox *", sizeof (struct ag_checkbox *) },
+  { "AG_Checkbox", sizeof (AG_Checkbox) },
+  { "struct ag_checkbox", sizeof (struct ag_checkbox) },
   { "AG_WidgetClass *", sizeof (AG_WidgetClass *) },
   { "struct ag_widget_class *", sizeof (struct ag_widget_class *) },
   { "AG_WidgetClass", sizeof (AG_WidgetClass) },
