@@ -39,6 +39,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-widget-box.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-button.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-button.ads", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-checkbox.ads", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-checkbox.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-window.ads", 0, ctxt_repos, 0, 0, 0644},
@@ -61,6 +63,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-widget-box.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-button.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-button.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-checkbox.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-checkbox.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-window.adb", 0, ctxt_repos, 0, 0, 0644},
@@ -91,6 +95,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-widget-box.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-widget-button.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget-button.ali", 0, ctxt_incdir, 0, 0, 0444},
+  {INST_COPY, "agar-gui-widget-checkbox.ali", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-checkbox.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-widget.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-window.ali", 0, ctxt_repos, 0, 0, 0644},
