@@ -7,3 +7,5 @@
 20080828 code: removed C prototypes from agar.gui.window.
 20080828 code: removed C prototypes for all current API functions.
 20080829 code: added agar.gui.widget.box.
+20080829 code: added agar.gui.widget.button.
+20080831 code: added agar.gui.widget.checkbox.
